--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Dagger2Demo</string>
+    <string name="text_dagger_mvp">Dagger2+MVP实现界面</string>
+    <string name="text_text_leftorright">textview实现左右对齐</string>
 </resources>
