--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Dagger2Demo</string>
     <string name="text_dagger_mvp">Dagger2+MVP实现界面</string>
     <string name="text_text_leftorright">textview实现左右对齐</string>
+    <string name="text_chart">饼状图</string>
 </resources>
